# haac

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-10-plan-validation.md  2026-04-13-haac-id-and-rename.md
docs/superpowers/specs/: 2026-04-10-plan-validation-design.md  2026-04-13-haac-id-and-rename-design.md
src/haac/: __init__.py  cli.py  client.py  config.py  git_ctx.py  init.py  models.py  output.py  rename_refs.py
src/haac/providers/: __init__.py  areas.py  automations.py  dashboard.py  devices.py  entities.py  floors.py  helpers.py  labels.py  scenes.py
tests/: test_areas.py  test_auto_commit.py  test_automations.py  test_cli.py  test_cli_rename_integration.py  test_config.py  test_dashboard.py  test_devices.py  test_entities.py  test_floors.py  test_git_ctx.py  test_haac_id_backfill.py  test_helpers.py  test_labels.py  test_rename_detection.py  test_rename_refs.py  test_rename_refs_flow.py  test_scenes.py  test_validation.py
