[project]
name = "haac"
version = "0.2.0"
description = "Home Assistant as Code — terraform-style config management"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "websockets",
    "httpx",
    "pydantic",
    "pyyaml",
    "python-dotenv",
    "rich",
]

[project.scripts]
haac = "haac.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/haac"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "strict"
